# GitCommands

./: .gitattributes  README.md  newGitBranch.sh
.github/workflows/: python-app.yml
Dependency_Shared_CMake/app/: CMakeLists.txt
Dependency_Shared_CMake/app/src/: main.cpp
Dependency_Shared_CMake/dependency/: CMakeLists.txt
Dependency_Shared_CMake/dependency/boost/: CMakeLists.txt
Dependency_Shared_CMake/dependency/boost_package/: CMakeLists.txt
Dependency_Shared_CMake/lib/: CMakeLists.txt
Dependency_Shared_CMake/lib/include/: Random.hpp
Dependency_Shared_CMake/lib/src/: DenseMatrix.cpp  Random.cpp
GitScripts/: deleteGitBranch.sh  mastermergeGitBranch.sh  updateGitBranch.sh
MKL_CMake/: CMakeLists.txt  main.cpp
Shared_Lib_Modern_CMake/: CMakeLists.txt
Shared_Lib_Modern_CMake/app/: CMakeLists.txt
Shared_Lib_Modern_CMake/app/src/: main.cpp
Shared_Lib_Modern_CMake/lib/: CMakeLists.txt
Shared_Lib_Modern_CMake/lib/include/: DenseMatrix.hpp  Random.hpp
Shared_Lib_Modern_CMake/lib/src/: Random.cpp
Shared_Library_CMake/: CMakeLists.txt  main.cpp
Shared_Library_CMake/include/mathops/: mathops.hpp
Shared_Library_CMake/src/mathops/: CMakeLists.txt
Static_Library_CMake/: CMakeLists.txt  main.cpp
Static_Library_CMake/src/mathops/: CMakeLists.txt  mathops.cpp
Testing-CPP/: README.md
Testing-Python/: README.md  circle_pytest.py  circle_unittest.py
beginning-programming/original/: infect-ori.cpp  mile2km_ori.c  ntd2eu_ori.cpp  statistics-ori.cpp
beginning-programming/revised/: HR.txt  SYS.txt  statistics-oop.cpp  statistics-rev.cpp
